# cobot_ws

./: README.md  commands.txt
src/custom_algo/path_finding/: CMakeLists.txt  package.xml
src/custom_algo/path_finding/include/path_finding/: dijkstra.hpp  waypoint_navigation.hpp
src/custom_algo/path_finding/planner/: dijkstra.cpp  waypoint_navigation.cpp
src/custom_algo/path_finding/src/: map_follower.cpp  occupancy_grid_subs.cpp
src/integration/combined_bringup/: CMakeLists.txt  package.xml
src/integration/combined_control/: CMakeLists.txt  package.xml
src/integration/combined_description/: CMakeLists.txt  package.xml
src/integration/combined_manipulation/: CMakeLists.txt  package.xml
src/integration/combined_navigation/: CMakeLists.txt  package.xml
src/manipulator/manipulator_bringup/: CMakeLists.txt  package.xml
src/manipulator/manipulator_control/: CMakeLists.txt  package.xml
src/manipulator/manipulator_description/: CMakeLists.txt  package.xml
src/manipulator/manipulator_perception/: CMakeLists.txt  package.xml
src/mobile_base/mobile_base_bringup/: CMakeLists.txt  package.xml
src/mobile_base/mobile_base_bringup/config/: mapper_params_online_async.yaml  nav2_params.yaml  slam_toolbox_config.rviz
src/mobile_base/mobile_base_bringup/launch/: gazebo.launch.py  ign.launch.py  mapping.launch.py  nav2.launch.py  rviz.launch.py  the_bot_ign_spawn.launch.py
src/mobile_base/mobile_base_bringup/rviz/: entire_setup.rviz
src/mobile_base/mobile_base_bringup/scripts/: remapper.py
src/mobile_base/mobile_base_control/: CMakeLists.txt  package.xml
src/mobile_base/mobile_base_description/: CMakeLists.txt  package.xml
src/mobile_base/mobile_base_description/urdf/: macros.xacro  materials.xacro  the_bot.xacro
src/mobile_base/mobile_base_navigation/: CMakeLists.txt  package.xml
(+6 files in other folders)
